playbook_web/tests/snapshots/serve__consent.snap
---
source: playbook_web/tests/serve.rs
expression: redact(&page)
---
<!doctype html>
<html lang="en">
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Connect &lt;b&gt;Claude&lt;/b&gt; &amp; co · Service-Arb</title>
<link rel="stylesheet" href="https://sa.evinvest.ltd/playbook_mcp/assets/connect.[hash].css">
<body class="bg-background text-ink font-sans antialiased">
<main class="flex min-h-dvh flex-col items-center justify-center gap-6 p-4 text-sm">
<div class="bg-card text-ink flex flex-col gap-6 rounded-xl border border-border py-6 shadow-sm w-[440px] max-w-full items-center px-8 pt-8 pb-7">
<div class="flex items-center gap-3"><span class="bg-muted flex size-12 items-center justify-center rounded-xl text-[22px] font-semibold">B</span><span class="text-ink-soft text-xs" aria-hidden="true">• • •</span><span class="bg-brand flex size-12 items-center justify-center rounded-xl border border-border font-serif text-[22px] font-semibold">SA</span></div>
<div class="flex w-full flex-col items-center gap-1.5 text-center">
	<h1 class="text-xl font-semibold">&lt;b&gt;Claude&lt;/b&gt; &amp; co wants to access the Service-Arb playbook</h1>
	<p class="text-ink-soft text-[13px]">sa.evinvest.ltd</p>
</div>
<div class="group/item flex items-center border border-transparent text-sm rounded-md transition-colors [a]:hover:bg-hover/50 [a]:transition-colors duration-100 flex-wrap outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] border-border py-3 px-4 gap-2.5 w-full bg-secondary">
	<span class="relative flex size-8 shrink-0 overflow-hidden rounded-full"><span class="bg-muted flex size-full items-center justify-center rounded-full text-[13px] font-semibold">M</span></span>
	<div class="flex min-w-0 flex-1 flex-col">
		<span class="text-ink-soft text-xs">Signed in as</span>
		<span class="truncate font-medium">member@example.com</span>
	</div>
	<a class="text-primary-ink text-[13px] font-medium hover:underline" href="https://sa.evinvest.ltd/auth/login?prompt=select_account&amp;return_to=%2Fplaybook_mcp%2Fauthorize%3Fresponse_type%3Dcode%26client_id%3D[client]%26redirect_uri%3Dhttp%253A%252F%252Flocalhost%253A64461%252Fcallback%26code_challenge%3DAhBy5AnaikEmb5ju_8w77MAjuufyCuYfpqXJ0nYyDKI%26code_challenge_method%3DS256%26state%3Ds1">Switch account</a>
</div>
<div class="flex w-full flex-col gap-3">
	<p class="text-ink-mid text-[13px] font-medium">This will allow &lt;b&gt;Claude&lt;/b&gt; &amp; co to:</p>
	<div class="flex w-full items-start gap-3"><span class="bg-popover text-primary-ink flex size-7 shrink-0 items-center justify-center rounded-lg" aria-hidden="true">⌕</span><div class="flex flex-col gap-0.5"><span class="font-medium">Search and read the playbook</span><span class="text-ink-soft text-[13px]">Guides, call notes and reference material, as you.</span></div></div>
	<div class="flex w-full items-start gap-3"><span class="bg-popover text-primary-ink flex size-7 shrink-0 items-center justify-center rounded-lg" aria-hidden="true">◷</span><div class="flex flex-col gap-0.5"><span class="font-medium">Use your daily allowance</span><span class="text-ink-soft text-[13px]">Every lookup is logged under your account and counts toward your daily budget.</span></div></div>
	<p class="text-ink-soft text-[13px]">&lt;b&gt;Claude&lt;/b&gt; &amp; co cannot change anything in the playbook or the panel.</p>
</div>
<hr class="w-full border-border">
<div class="text-ink-soft flex w-full flex-col gap-1 rounded-lg bg-secondary px-3 py-2.5">
	<p class="text-xs">You’ll be returned to</p>
	<p class="text-[13px] break-all">http://<b class="text-ink font-medium">localhost:64461</b>/callback</p>
	<p class="text-xs">That’s an app on this computer. Allow only if you just ran <code>/mcp</code> → Authenticate in Claude Code.</p>
</div>
<form class="grid w-full grid-cols-2 gap-3" method="post" action="https://sa.evinvest.ltd/playbook_mcp/authorize">
	<input type="hidden" name="nonce" value="[nonce]">
	<a class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[var(--control-radius)] text-sm font-medium transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-accent-error/20 aria-invalid:border-accent-error border border-input bg-transparent shadow-xs hover:bg-hover hover:text-ink h-10 px-6 has-[>svg]:px-4 w-full" href="/playbook_mcp/authorize?response_type=code&amp;client_id=[client]&amp;redirect_uri=http%3A%2F%2Flocalhost%3A64461%2Fcallback&amp;code_challenge=AhBy5AnaikEmb5ju_8w77MAjuufyCuYfpqXJ0nYyDKI&amp;code_challenge_method=S256&amp;state=s1&amp;decision=deny">Cancel</a>
	<button class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[var(--control-radius)] text-sm font-medium transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-accent-error/20 aria-invalid:border-accent-error bg-primary text-on-primary hover:bg-primary/90 focus-visible:ring-0 focus-visible:outline-solid focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-ring h-10 px-6 has-[>svg]:px-4 w-full">Allow access</button>
</form>
</div>
<p class="text-ink-soft text-xs">Service-Arb · EV Invest</p>
</main>
</body>
</html>
